tests/lean/interactive/t4.lean.expected.out
Type Ctrl-D or 'Exit.' to exit or 'Help.' for help.
#   Set: pp::colors
  Set: pp::unicode
Error (line: 4, pos: 8) invalid definition, identifier expected
# done
# 