tests/lean/interactive/t4.lean
Theorem (a : Bool) : a.
Echo "done".